Add historgram files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(Assignments)
 #file(GLOB SOURCES "**/**/*.c" "**/**/*.cpp" "**/**/*.cu")
 #add_executable(dummy ${SOURCES})
 
-add_subdirectory(Assignments/Assignment1)
+add_subdirectory(Assignments)
