--- a/Assignments/Assignment2/3/cpu/with_mutual_exclusion/software_transactional/CMakeLists.txt
+++ b/Assignments/Assignment2/3/cpu/with_mutual_exclusion/software_transactional/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(
 )
 
 target_link_libraries(Assignment2-3-cpu-with_mutual_exclusion-software_transactional pthread)
+
+target_compile_options(Assignment2-3-cpu-with_mutual_exclusion-software_transactional PUBLIC -fgnu-tm)
