--- a/Project/NBody/CMakeLists.txt
+++ b/Project/NBody/CMakeLists.txt
@@ -2,14 +2,9 @@ enable_language(CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS "-Ofast -march=native -g -fopenmp")
+set(CMAKE_CXX_FLAGS "-march=native -g -fopenmp")
+#set(CMAKE_CXX_FLAGS "-Ofast -march=native -g -fopenmp")
 
-add_executable(
-	Project
-	src/BarnzNhutt.cpp
-#	src/Octant.cpp
-#	src/Body.cpp
-#	src/Vector3.cpp
-#	src/Graphics.cpp
-#	src/Utility.cpp
-)
+add_subdirectory(Libraries)
+add_subdirectory(Main)
+add_subdirectory(Test)
