--- a/Assignments/Assignment3/CMakeLists.txt
+++ b/Assignments/Assignment3/CMakeLists.txt
@@ -1,5 +1,5 @@
-#add_compile_definitions(GENERATE=-D GENERATE)
-#add_compile_definitions(GENERATE=)
-add_compile_definitions(TIMING=-D TIMING)
+#add_definitions(GENERATE=-D GENERATE)
+#add_definitions(GENERATE=)
+add_definitions(-D TIMING)
 
 add_subdirectory(SPMV-ELLPACK)
