Added timer & -Ofast

--- a/Project/NBody/CMakeLists.txt
+++ b/Project/NBody/CMakeLists.txt
@@ -2,8 +2,8 @@ enable_language(CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS "-march=native -g -fopenmp")
-#set(CMAKE_CXX_FLAGS "-Ofast -march=native -g -fopenmp")
+#set(CMAKE_CXX_FLAGS "-march=native -g -fopenmp")
+set(CMAKE_CXX_FLAGS "-Ofast -march=native -fopenmp")
 
 add_subdirectory(Libraries)
 add_subdirectory(Main)
